[package]
name = "token-swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_swap"

# Conditioanl compilation features.
[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
fuzz = ["arbitrary", "roots"]

[profile.release]
overflow-checks = true

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"
anchor-lang = "0.24.2"
spl-math = "0.1.0"
anchor-spl = "0.24.2"
thiserror = "1.0"
arbitrary = {version = "^1.0", features = ["derive"], optional = true}
roots = {version  = "0.0.7", optional = true}

[dev-dependencies]
# solana-sdk = "^1.10.17"
proptest = "1.0"
roots = "0.0.7"

